--- a/FEWD1219/FEWD1219 Complete/index.html
+++ b/FEWD1219/FEWD1219 Complete/index.html
@@ -10,7 +10,7 @@
     ></script>
 
     <!-- Iteration 1: Why hasn't CSS not applied to the web page? -->
-    <link rel="stylesheet" href="//style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
@@ -30,7 +30,7 @@
         </div>
         <div class="icons">
           <!-- Iteration 4: The color of GitHub icon should be #005cd5 but it is seen black, why?  -->
-          <a style="color: black" class="github" href="#"
+          <a class="github" href="#"
             ><i class="fab fa-github fa-2x"></i
           ></a>
           <a class="linkedin" href="#"><i class="fab fa-linkedin fa-2x"></i></a>
