--- a/FEWD1221/FEWD1221 - Complete/index.html
+++ b/FEWD1221/FEWD1221 - Complete/index.html
@@ -7,6 +7,7 @@
       type="text/css"
     />
     <link rel="stylesheet" href="style.css" />
+    <title>People Incubator</title>
   </head>
 
   <body>
