--- a/FEWD1218/FEWD1218 Complete/index.html
+++ b/FEWD1218/FEWD1218 Complete/index.html
@@ -29,8 +29,11 @@
       </div>
     </nav>
     <div class="content-table">
-      <p class="header">TIME TABLE 📋</p>
       <table class="time-table">
+        <caption class="header">
+          TIME TABLE 📋
+        </caption>
+
         <thead>
           <tr>
             <td>Day/Period</td>
@@ -50,7 +53,7 @@
             <td>English</td>
             <td>Maths</td>
             <td>Chemistry</td>
-            <td align="center" rowspan="6" height="50">
+            <td class="break" rowspan="6" height="50">
               <h2>L<br />U<br />N<br />C<br />H</h2>
             </td>
             <td>Lab</td>
