--- a/FEWD1221/FEWD1221 - Boilerplate/index.html
+++ b/FEWD1221/FEWD1221 - Boilerplate/index.html
@@ -58,8 +58,8 @@
       </div>
     </div>
 
-    <!-- Jumbotron -->
-    <div class="jumbotron">
+    <!-- Membership -->
+    <div class="membership">
       <div class="container">
         <h2>Stay Connected</h2>
         <p>Receive weekly insights from industry insiders.</p>
