--- a/FEWD1219/FEWD1219 Boilerplate/index.html
+++ b/FEWD1219/FEWD1219 Boilerplate/index.html
@@ -22,21 +22,16 @@
         />
         <div class="title-box">
           <h1>John Doe</h1>
-          <p><em class="programs">Computer Science and Engineering</em></p>
+          <p><em class="programs">Computer Science Engineer</em></p>
           <p class="hashtags">
             <em class="hashtag">#developer</em>
             <em class="hashtag">#learner</em>
           </p>
         </div>
         <div class="icons">
-          <!-- Iteration 4: The color of GitHub icon should be #005cd5 but it is seen black, why?  -->
-          <a style="color: black" class="github" href="#"
-            ><i class="fab fa-github fa-2x"></i
-          ></a>
+          <a style="color: black" class="github" href="#"><i class="fab fa-github fa-2x"></i></a>
           <a class="linkedin" href="#"><i class="fab fa-linkedin fa-2x"></i></a>
-          <a class="instagram" href="#"
-            ><i class="fab fa-instagram fa-2x"></i
-          ></a>
+          <a class="instagram" href="#"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
       </header>
       <main class="main-box">
