--- a/FEWD1218/FEWD1218 Complete/index.html
+++ b/FEWD1218/FEWD1218 Complete/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar">
       <div class="left-cont">
         <img src="./assets/kalvi.png" alt="logo" class="icon" />
-        <p class="logo-name">KalviJunior</p>
+        <p class="logo-name">Kalvi</p>
       </div>
       <div class="right-cont">
         <div class="user">
@@ -37,79 +37,72 @@
         <thead>
           <tr>
             <td>Day/Period</td>
-            <td>I<br />8:30-9:20</td>
-            <td>II<br />9:20-10:10</td>
-            <td>III<br />10:10-11:00</td>
-            <td>11:00-11:40</td>
-            <td>IV<br />11:40-12:30</td>
-            <td>V<br />12:30-1:20</td>
-            <td>VI<br />1:20-2:10</td>
-            <td>VII<br />2:10-3:00</td>
+            <td>I<br />9am - 10am</td>
+            <td>II<br />10am - 11am</td>
+            <td>III<br />11:15am - 12:15pm</td>
+            <td>IV<br />12:15pm - 1:15pm</td>
+            <td>1:15pm - 2:00pm</td>
+            <td>V<br />2:00pm - 5:00pm</td>
+            <td>VI<br />5:30pm - 6:30pm</td>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td>Monday</td>
-            <td>English</td>
-            <td>Maths</td>
-            <td>Chemistry</td>
+            <td>Subject2</td>
+            <td>Subject4</td>
+            <td>Subject6</td>
+            <td>Subject8</td>
             <td class="break" rowspan="6" height="50">
               <h2>L<br />U<br />N<br />C<br />H</h2>
             </td>
-            <td>Lab</td>
-            <td>Physics</td>
-            <td>Hindi</td>
-            <td>Biology</td>
+            <td>Subject1</td>
+            <td>Subject5</td>
           </tr>
           <tr>
             <td>Tuesday</td>
-            <td>Lab</td>
-            <td>English</td>
-            <td>Chemistry</td>
-            <td>Biology</td>
-            <td>Maths</td>
-            <td>Sports</td>
-            <td>Hindi</td>
+            <td>Subject8</td>
+            <td>Subject2</td>
+            <td>Subject6</td>
+            <td>Subject3</td>
+            <td>Subject4</td>
+            <td>Subject7</td>
           </tr>
           <tr>
             <td>Wednesday</td>
-            <td>Maths</td>
-            <td>Hindi</td>
-            <td>Biology</td>
-            <td>Physics</td>
-            <td>English</td>
-            <td>Chemistry</td>
-            <td>Library</td>
+            <td>Subject4</td>
+            <td>Subject5</td>
+            <td>Subject3</td>
+            <td>Subject1</td>
+            <td>Subject2</td>
+            <td>Subject6</td>
           </tr>
           <tr>
             <td>Thursday</td>
-            <td>Physics</td>
-            <td>English</td>
-            <td>Chemistry</td>
-            <td>Hindi</td>
-            <td>Biology</td>
-            <td>Lab</td>
-            <td>Maths</td>
+            <td>Subject1</td>
+            <td>Subject2</td>
+            <td>Subject6</td>
+            <td>Subject5</td>
+            <td>Subject3</td>
+            <td>Subject8</td>
           </tr>
           <tr>
             <td>Friday</td>
-            <td>Lab</td>
-            <td>Maths</td>
-            <td>Hindi</td>
-            <td>Chemistry</td>
-            <td>English</td>
-            <td>Physics</td>
-            <td>Biology</td>
+            <td>Subject8</td>
+            <td>Subject4</td>
+            <td>Subject5</td>
+            <td>Subject6</td>
+            <td>Subject2</td>
+            <td>Subject1</td>
           </tr>
           <tr>
             <td>Saturday</td>
-            <td>English</td>
-            <td>Chemistry</td>
-            <td>Maths</td>
-            <td>Biology</td>
-            <td>Seminar</td>
-            <td>Sports</td>
-            <td>Hindi</td>
+            <td>Subject2</td>
+            <td>Subject6</td>
+            <td>Subject4</td>
+            <td>Subject3</td>
+            <td>Subject1</td>
+            <td>Subject7</td>
           </tr>
         </tbody>
       </table>
