--- a/FEWD1102/FEWD1102 - Boilerplate/index.html
+++ b/FEWD1102/FEWD1102 - Boilerplate/index.html
@@ -32,6 +32,7 @@
       </div>
     </div>
 
-    <script src="./index.js"></script>
+    <!-- Step 9: Add index.js file to the HTML file -->
+
   </body>
 </html>
