--- a/FEWD1115/FEWD1115 - Completed/index.html
+++ b/FEWD1115/FEWD1115 - Completed/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <iframe src="./assets/background.svg" frameborder="0"></iframe>
+    <!-- Iteration 1: Embed dark-bg.svg (in assets folder) file with an iframe with no borders -->
+    <iframe src="./assets/dark-bg.svg" frameborder="0"></iframe>
 
     <div class="header">
+      <!-- Iteration 2: Embed time.svg (in assets folder) file with an img tag -->
       <img src="./assets/time.svg" alt="logo" />
       <h1>Clock</h1>
     </div>
@@ -18,6 +20,7 @@
     <div id="time">
       <div class="first circle">
         <div class="dots hr_dot"></div>
+        <!-- Iteration 3: Create a circle with centre (70, 70) and of radius 70 -->
         <svg>
           <circle cx="70" cy="70" r="70"></circle>
           <circle cx="70" cy="70" r="70"></circle>
@@ -26,6 +29,7 @@
       </div>
       <div class="second circle">
         <div class="dots min_dot"></div>
+        <!-- Iteration 3: Create a circle with centre (70, 70) and of radius 70 -->
         <svg>
           <circle cx="70" cy="70" r="70"></circle>
           <circle cx="70" cy="70" r="70"></circle>
@@ -34,6 +38,7 @@
       </div>
       <div class="third circle">
         <div class="dots sec_dot"></div>
+        <!-- Iteration 3: Create a circle with centre (70, 70) and of radius 70 -->
         <svg>
           <circle cx="70" cy="70" r="70"></circle>
           <circle cx="70" cy="70" r="70"></circle>
