--- a/Codealong Projects/FE0012/index.html
+++ b/Codealong Projects/FE0012/index.html
@@ -41,6 +41,12 @@
         </div>
       </div>
       <div class="back-side">
+        <div class="profile-pic">
+          <img
+            src="https://i.pinimg.com/736x/89/90/48/899048ab0cc455154006fdb9676964b3.jpg"
+            alt="profile-pic"
+          />
+        </div>
         <div class="name-tag">
           <h1>
             <strong>JOHN DOE</strong>
