--- a/Codealong Projects/FE0012/index.html
+++ b/Codealong Projects/FE0012/index.html
@@ -15,7 +15,11 @@
     <div class="namecard">
       <div class="front-side">
         <div class="info-grid">
-          <div class="name">
+          <div class="intro">
+            <img
+              src="https://i.pinimg.com/736x/89/90/48/899048ab0cc455154006fdb9676964b3.jpg"
+              alt="profile-pic"
+            />
             <h2>JOHN DOE</h2>
             <p>SOFTWARE ENGINEER</p>
           </div>
@@ -38,20 +42,6 @@
             <br />
             <a href="#" class="web">www.<strong>johnwebsite</strong>.com</a>
           </div>
-        </div>
-      </div>
-      <div class="back-side">
-        <div class="profile-pic">
-          <img
-            src="https://i.pinimg.com/736x/89/90/48/899048ab0cc455154006fdb9676964b3.jpg"
-            alt="profile-pic"
-          />
-        </div>
-        <div class="name-tag">
-          <h1>
-            <strong>JOHN DOE</strong>
-          </h1>
-          <h3>SOFTWARE ENGINEER</h3>
         </div>
       </div>
     </div>
